# unilib

./: .gitignore  CMakeLists.txt  README.md
include/unilib/: dequeue.h  iter.h  option.h  queue.h  strings.h
src/: dequeue.c  iter.c  option.c  queue.c  queue.h  string.c  string.h  strings.c
tests/: CMakeLists.txt  dequeue.c  queue.c
